# webhook

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
myapp/: admin.py  backends.py  models.py  permission.py  schemas.py  serializers.py  tasks.py  urls.py  views.py
myapp/migrations/: 0001_initial.py
myapp/tests/: fabrics.py  tests.py
templates/admin/: index.html  login.html
testkeycloak/: asgi.py  celery.py  secrets.py  settings.py  urls.py  wsgi.py
